Update to styles making website calculator look and respond better also added clear and erase button
Still need to add javascript to make calculator work but style is good to go

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="display">Words go here</div>
+        <div class="displaycontainer">
+            <div class="display">Numbers go here</div>
+        </div>
         <div class="buttons">
-        
+            <div class="clear-container">
+                <div class="clear">Clear</div>
+                <div class="erase">Erase</div>
+            </div>
             <div class="button-container">
                 <div class="button">7</div>
                 <div class="button">8</div>
