added code needed for calculator to work
added event listeners and various functions to make calculator work

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="calculator">
         <div class="displaycontainer">
-            <div class="display">Numbers go here</div>
+            <div class="display">0</div>
         </div>
         <div class="buttons">
             <div class="clear-container">
